style.css
*{
    box-sizing: border-box;
}

body{
    margin: 4px;
    padding: 4px;
    background-color: lightgray;
}

.mainBody{
    display: flex;
    justify-content: space-between;
}

.header{
    display: flex;
    justify-content: space-around;
    align-items: baseline;
}

.title{
    color: black;
    display: flex;
    justify-content: center;
    padding: 10px;
    font-size: xx-large;
    font-style: italic;
}


.image_text1{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    text-align: center;
}

.line{
    border: 4px;
    border-color: white;
    border-radius: 3px;
    margin-left: 50px;
    margin-right: 50px;
}

.image_text2{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    text-align: center;
}

.image{
    width: 500px;
    height: 300px;
    background-color: rgb(143, 5, 33);
}

.text{
    width: 500px;
    margin-top: 12px;
}

.image img{
    width: 500px;
    height: 300px;
    
}

.vl {
    border-left: 6px solid white;
    height: 450px;
    border-radius: 5px;
    margin-top: 10px;
}

